 - Accept true, "on" and "yes" as values for enabling options in docker environment variables.
 - Merged controllers for web admin dashboard.
 - Added label in Sync Dashboard to indicate on which mode it started (Synchronizer or Proxy).
 - Added task to check Sync environtment and added healthySince property to healtheck endpoint.
 - Added healthcheck into Sync Dashboard.
2.3.0 (May 30, 2019)
 - Added support for track properties
 - Added cache overlay on top of redis for fetching events
2.2.1 (May 2, 2019)
 - Fixed possible (but unlikely) issue when expiring traffic type.
2.2.0 (April 30, 2019)
 - Added logic to store Dynamic Configurations when splitChanges is called in redis mode.
 - Added logic to store TrafficTypeNames when splitChanges is called in redis mode.
2.1.2 (March 27, 2019)
 - Fixed healthcheck status.
2.1.1 (March 8, 2019)
 - Updated Splits refreshing rate.
2.1.0 (Jan 31, 2019)
 - Added endpoints for flushing and dropping Impressions/Events mannually.
 - Added new metrics on Synchronizer Dashboard in Producer Mode to reflect the queue size of Events and Impressions.
 - Added buttons to execute flushing and dropping for Impressions/Events.
 - Added validator to inform error when some property is wrong in json config.
2.0.0 (Dec 21, 2018)
 - Migrated impressions to use a single queue approach.
1.8.0 (Nov 14, 2018)
 - Added support for redis cluster.
 - Migrated to dep.
 - Removed vendor folder.
1.7.2 (Oct 4, 2018)
 - Fix bug that cased synchronizer to crash with malformed impressions & metrics keys.
 - Improved impressions posting strategy to maximize throughput.
 - Updated defaults to send more impressions per unit of time.
1.7.1 (Sep 7, 2018)
 - Fix variable in dockerfile entrypoint
1.7.0 (Aug 29, 2018)
 - Add support for redis sentinel
1.6.0 (Apr 3, 2018)
 - Graceful shutdown producer/proxy
 - Web dashboard in producer mode has been added  
1.5.0 (Feb 19, 2018)
 - Event support in proxy mode
1.4.0 (Feb 8, 2018)