@@ -29,8 +29,7 @@ var splitChangesCounters = counter.NewCounter()
 var splitChangesLocalCounters = counter.NewLocalCounter()
 
 func taskFetchSplits(splitFetcherAdapter fetcher.SplitFetcher,
-	splitStorageAdapter storage.SplitStorage,
-	trafficTypeStorageAdapter storage.TrafficTypeStorage) {
+	splitStorageAdapter storage.SplitStorage) {
 
 	lastChangeNumber, err := splitStorageAdapter.ChangeNumber()
 	if err != nil {
@@ -39,7 +38,7 @@ func taskFetchSplits(splitFetcherAdapter fetcher.SplitFetcher,
 	}
 
 	if lastChangeNumber == -1 {
-		trafficTypeStorageAdapter.Clean()
+		splitStorageAdapter.CleanTrafficTypes()
 	}
 
 	startTime := splitChangesLatencies.StartMeasuringLatency()
@@ -76,7 +75,6 @@ func taskFetchSplits(splitFetcherAdapter fetcher.SplitFetcher,
 			}
 			jsonD, _ := rawSplits[i].MarshalJSON()
 			if splitDTO.Status == "ACTIVE" {
-				trafficTypeStorageAdapter.Incr(splitDTO.TrafficTypeName)
 				if err := splitStorageAdapter.Save(jsonD); err == nil {
 					savedItems++
 					totalConditions := len(splitDTO.Conditions)
@@ -94,7 +92,6 @@ func taskFetchSplits(splitFetcherAdapter fetcher.SplitFetcher,
 				}
 			} else {
 				if err := splitStorageAdapter.Remove(jsonD); err == nil {
-					trafficTypeStorageAdapter.Decr(splitDTO.TrafficTypeName)
 					deletedItems++
 				}
 			}
@@ -106,12 +103,11 @@ func taskFetchSplits(splitFetcherAdapter fetcher.SplitFetcher,
 // FetchSplits task to retrieve split changes from Split servers
 func FetchSplits(splitFetcherAdapter fetcher.SplitFetcher,
 	splitStorageAdapter storage.SplitStorage,
-	splitsRefreshRate int, wg *sync.WaitGroup,
-	trafficTypeStorageAdapter storage.TrafficTypeStorage) {
+	splitsRefreshRate int, wg *sync.WaitGroup) {
 	wg.Add(1)
 	keepLoop := true
 	for keepLoop {
-		taskFetchSplits(splitFetcherAdapter, splitStorageAdapter, trafficTypeStorageAdapter)
+		taskFetchSplits(splitFetcherAdapter, splitStorageAdapter)
 
 		select {
 		case msg := <-splitsIncoming:
